# rusty-anna

./: .env.example  .gitignore  Cargo.toml  README.md  commands.example.yml
src/: main.rs
src/commands/: commands.rs  commandset.rs  hangman.rs  mod.rs
src/connection/: model.rs
src/logger/: logger.rs
src/message/: model.rs
