[package]
name = "kotapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
futures = "0.3.5"
dotenv = "0.15.0"
serde_json = "1.0.64"
anyhow = "1.0"
serde = "1.0.125"