[package]
name = "kotapi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "cookies"] }
futures = "0.3.5"
dotenv = "0.15.0"
serde_json = "1.0.64"
anyhow = "1.0"
serde = "1.0.125"
http = "0.2.4"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.4"
regex = "1.5.4"
rand = "0.8.3"
log = "0.4.14"
chrono = "0.4.19"
lazy_static = "1.4.0"